--- a/apple-last-ver.html
+++ b/apple-last-ver.html
@@ -2,47 +2,81 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="applemain.css" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Hanuman:wght@100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>apple</title>
   </head>
   <body>
     <main>
-      <header class="header-container">
+      <!-- header -->
+      <header>
         <a href="https://www.apple.com/" class="header-logo"></a>
-        <nav class="nav-menu">
-          <a href="https://www.apple.com/" class="nav-menu__item">Store</a>
-          <a href="https://www.apple.com/" class="nav-menu__item">Mac</a>
-          <a href="https://www.apple.com/" class="nav-menu__item">iPad</a>
-          <a href="https://www.apple.com/" class="nav-menu__item">iPhone</a>
-          <a href="https://www.apple.com/" class="nav-menu__item">Watch</a>
-          <a href="https://www.apple.com/" class="nav-menu__item">Vision</a>
-          <a href="https://www.apple.com/" class="nav-menu__item">Airpods</a>
-          <a href="https://www.apple.com/" class="nav-menu__item">TV & Home</a>
-          <a href="https://www.apple.com/" class="nav-menu__item"
+        <nav class="header-nav">
+          <a href="https://www.apple.com/" class="header-nav__item">Store</a>
+          <a href="https://www.apple.com/" class="header-nav__item">Mac</a>
+          <a href="https://www.apple.com/" class="header-nav__item">iPad</a>
+          <a href="https://www.apple.com/" class="header-nav__item">iPhone</a>
+          <a href="https://www.apple.com/" class="header-nav__item">Watch</a>
+          <a href="https://www.apple.com/" class="header-nav__item">Vision</a>
+          <a href="https://www.apple.com/" class="header-nav__item">Airpods</a>
+          <a href="https://www.apple.com/" class="header-nav__item"
+            >TV & Home</a
+          >
+          <a href="https://www.apple.com/" class="header-nav__item"
             >Entertainment</a
           >
-          <a href="https://www.apple.com/" class="nav-menu__item"
+          <a href="https://www.apple.com/" class="header-nav__item"
             >Accessories</a
-          >
-          <a href="https://www.apple.com/" class="nav-menu__item"
-            >Accessories</a
-          >
+          ><a href="https://www.apple.com/" class="header-nav__item">Support</a>
         </nav>
-        <div class="header-buttons">
-          <button class="header-button search"></button>
-          <button class="header-button bag"></button>
-          <button class="header-button more"></button>
-        </div>
+        <button class="header-button header-button--search"></button>
+        <button class="header-button header-button--bag"></button>
+        <button class="header-button header-button--more"></button>
       </header>
-      <section></section>
-      <section></section>
+
+      <!-- banner -->
+      <section class="banner">
+        <div class="banner__text">
+          We’re donating $5 to the Global Fund for every purchase made with
+          Apple Pay at Apple. Through 12/8.
+        </div>
+      </section>
+
+      <!-- iPhone 16 Pro -->
+      <section class="iphone16pro-container">
+        <div class="iphone16pro">
+          <div class="iphone16pro__title">iPhone 16 Pro</div>
+          <div class="iphone16pro__subtitle">Hello, Apple Intelligence.</div>
+          <div class="iphone16pro__buttons">
+            <button class="iphone16pro__button">Learn more</button>
+            <button
+              class="iphone16pro__button iphone16pro__button--bluebordtrans"
+            >
+              Buy
+            </button>
+          </div>
+        </div>
+      </section>
+
+      <!-- iPhone 16 -->
+      <section class="iphone16-container">
+        <div class="iphone16">
+          <div class="iphone16__title">iPhone 16</div>
+          <div class="iphone16__subtitle">Hello, Apple Intelligence.</div>
+          <div class="iphone16__buttons">
+            <button class="iphone16__button">Learn more</button>
+            <button class="iphone16__button iphone16__button--trans">
+              Buy
+            </button>
+          </div>
+        </div>
+      </section>
+
       <section></section>
       <section></section>
       <section></section>
