did-til-products

--- a/apple-last-ver.html
+++ b/apple-last-ver.html
@@ -77,8 +77,144 @@
         </div>
       </section>
 
-      <section></section>
-      <section></section>
+      <!-- Gift magic -->
+      <section class="giftmagic-container">
+        <div class="giftmagic">
+          <div class="giftmagic__title">Gift magic.</div>
+          <div class="giftmagic__subtitle">
+            Make their holiday wish come true.
+          </div>
+          <button class="giftmagic__button">Shop gifts</button>
+        </div>
+      </section>
+
+      <!-- Apple Products -->
+      <section>
+        <div class="apple-products">
+          <div class="apple-product apple-product--ipadair">
+            <div
+              class="apple-product__title apple-product__title--ipadair"
+            ></div>
+            <div
+              class="apple-product__subtitle apple-product__subtitle--ipadair"
+            >
+              Two sizes. Faster chip. Does it all.
+            </div>
+            <div class="apple-product__buttons">
+              <button class="apple-product__button">Learn more</button>
+              <button
+                class="apple-product__button apple-product__button--transparent"
+              >
+                Buy
+              </button>
+            </div>
+            <div class="apple-product__sub">Hello, Apple Intelligence.</div>
+          </div>
+          <div class="apple-product apple-product--airpodspro2">
+            <div class="apple-product__title apple-product__title--airpodspro2">
+              AirPods Pro 2
+            </div>
+            <div
+              class="apple-product__subtitle apple-product__subtitle--airpodspro2"
+            >
+              Now with a Hearing Aid feature.2
+            </div>
+            <div class="apple-product__buttons">
+              <button class="apple-product__button">Learn more</button>
+              <button
+                class="apple-product__button apple-product__button--transparent"
+              >
+                Buy
+              </button>
+            </div>
+          </div>
+          <div class="apple-product apple-product--watch">
+            <div class="apple-product__title apple-product__title--watch">
+              WATCH
+            </div>
+            <div class="apple-product__subtitle apple-product__subtitle--watch">
+              Thinstant classic.
+            </div>
+            <div class="apple-product__buttons">
+              <button class="apple-product__button">Learn more</button>
+              <button
+                class="apple-product__button apple-product__button--transparent"
+              >
+                Buy
+              </button>
+            </div>
+          </div>
+          <div class="apple-product apple-product--macbookair">
+            <div class="apple-product__title">MacBook Air</div>
+            <div
+              class="apple-product__subtitle apple-product__subtitle--macbookair"
+            >
+              Lean. Mean. M3 machine.
+            </div>
+            <div class="apple-product__buttons">
+              <button class="apple-product__button">Learn more</button>
+              <button
+                class="apple-product__button apple-product__button--transparent"
+              >
+                Buy
+              </button>
+            </div>
+          </div>
+          <div class="apple-product apple-product--smallbusiness">
+            <div class="apple-product__title">Apple for Small Business</div>
+            <div
+              class="apple-product__subtitle apple-product__subtitle--smallbusiness"
+            >
+              Hardware, software, and expert help - all in one place.
+            </div>
+            <div class="apple-product__buttons">
+              <button class="apple-product__button">Learn more</button>
+            </div>
+          </div>
+          <div class="apple-product apple-product--carrierdeals">
+            <div class="apple-product__title">Carrier deals at Apple</div>
+            <div
+              class="apple-product__subtitle apple-product__subtitle--carrierdeals"
+            >
+              Get up to $1000 in credit on a new iPhone. Trade-in may be
+              required.
+            </div>
+            <div class="apple-product__buttons">
+              <button class="apple-product__button">Find your deal</button>
+            </div>
+          </div>
+          <div class="apple-product apple-product--tradein">
+            <div class="apple-product__title apple-product__title--tradein">
+              Trade In
+            </div>
+            <div
+              class="apple-product__subtitle apple-product__subtitle--tradein"
+            >
+              Get $180–$650 in credit when you trade in iPhone 12 or higher.3
+            </div>
+            <div class="apple-product__buttons">
+              <button class="apple-product__button">Get your estimate</button>
+            </div>
+          </div>
+          <div class="apple-product apple-product--card">
+            <div class="apple-product__title apple-product__title--card">
+              Card
+            </div>
+            <div class="apple-product__subtitle apple-product__subtitle--card">
+              Get up to 3% Daily Cash back<br />
+              with every purchase.
+            </div>
+            <div class="apple-product__buttons">
+              <button class="apple-product__button">Learn more</button>
+              <button
+                class="apple-product__button apple-product__button--transparent"
+              >
+                Apply now
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
       <section></section>
       <section></section>
       <section></section>
