movie scroller part ended

--- a/apple-last-ver.html
+++ b/apple-last-ver.html
@@ -215,7 +215,66 @@
           </div>
         </div>
       </section>
-      <section></section>
+
+      <!-- apple tv scoll -->
+      <section class="tv-scroller">
+        <div class="tv-slides-container">
+          <div class="tv-slides">
+            <div class="tv-slide">
+              <img src="images/mov1.jpg" class="tv-slide__img" />
+              <div class="tv-slide__text">
+                <button class="tv-slide__button">Stream now</button>
+                <div class="tv-slide-text__info"></div>
+              </div>
+            </div>
+            <div class="tv-slide">
+              <img src="images/mov2.png" class="tv-slide__img" />
+              <div class="tv-slide__text">
+                <button class="tv-slide__button">Stream now</button>
+                <div class="tv-slide-text__info">
+                  <span>Comedy</span> · Will they make history…or fake it?
+                </div>
+              </div>
+            </div>
+            <div class="tv-slide">
+              <img src="images/mov3.jpg" class="tv-slide__img" />
+              <div class="tv-slide__text">
+                <button class="tv-slide__button">Stream now</button>
+                <div class="tv-slide-text__info"></div>
+              </div>
+            </div>
+            <div class="tv-slide">
+              <img src="images/mov4.pad.png" class="tv-slide__img" />
+              <div class="tv-slide__text">
+                <button class="tv-slide__button">Stream now</button>
+                <div class="tv-slide-text__info">
+                  <span>Drama</span> · Saoirse Ronan stars in a wartime family
+                  epic from director Steve McQueen.
+                </div>
+              </div>
+            </div>
+            <div class="tv-slide">
+              <img src="images/mov5.pad.jpg" class="tv-slide__img" />
+              <div class="tv-slide__text">
+                <button class="tv-slide__button">Stream now</button>
+                <div class="tv-slide-text__info"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="dot-box">
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+        </div>
+      </section>
       <section></section>
       <section></section>
     </main>
