last content part

--- a/apple-last-ver.html
+++ b/apple-last-ver.html
@@ -216,7 +216,7 @@
         </div>
       </section>
 
-      <!-- apple tv scoll -->
+      <!-- apple tv scroll -->
       <section class="tv-scroller">
         <div class="tv-slides-container">
           <div class="tv-slides">
@@ -262,7 +262,7 @@
             </div>
           </div>
         </div>
-        <div class="dot-box">
+        <div class="tv-dot-box">
           <div class="dot"></div>
           <div class="dot"></div>
           <div class="dot"></div>
@@ -275,7 +275,50 @@
           <div class="dot"></div>
         </div>
       </section>
-      <section></section>
+
+      <!-- apple content scroll -->
+      <section class="content-scroller">
+        <div class="content-slides-container">
+          <div class="content-slides">
+            <div class="content-slide">
+              <img src="images/cont1.png" class="content-slide__img" />
+              <div class="content-slide__title">
+                Improve Your Posture wicth<br />
+                Pilates
+              </div>
+            </div>
+            <div class="content-slide">
+              <img src="images/cont2.png" class="content-slide__img" />
+              <div class="content-slide__title content-slide__title--randb">
+                R&B Now
+              </div>
+            </div>
+            <div class="content-slide">
+              <img src="images/cont3.png" class="content-slide__img" />
+              <div class="content-slide__title">NBA 2K25 Arcade Edition</div>
+            </div>
+            <div class="content-slide">
+              <img src="images/cont4.png" class="content-slide__img" />
+              <div class="content-slide__title">Strength with Kim</div>
+            </div>
+            <div class="content-slide">
+              <img src="images/cont5.jpg" class="content-slide__img" />
+              <div class="content-slide__title"></div>
+            </div>
+            <div class="content-slide">
+              <img src="images/cont6.pho.png" class="content-slide__img" />
+              <div class="content-slide__title">La Oficial</div>
+            </div>
+            <div class="content-slide">
+              <img src="images/cont7.pho.jpg" class="content-slide__img" />
+              <div class="content-slide__title">Travel-Friendly Workouts</div>
+            </div>
+          </div>
+        </div>
+        <div class="content-button-box">
+          <button class="content-button"></button>
+        </div>
+      </section>
       <section></section>
     </main>
   </body>
