product list til

--- a/apple-store.html
+++ b/apple-store.html
@@ -1,1 +1,90 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="apple-store.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Hanuman:wght@100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <main>
+      <!-- header -->
+      <header>
+        <a href="https://www.apple.com/" class="header-logo"></a>
+        <nav class="header-nav">
+          <a href="https://www.apple.com/" class="header-nav__item">Store</a>
+          <a href="https://www.apple.com/" class="header-nav__item">Mac</a>
+          <a href="https://www.apple.com/" class="header-nav__item">iPad</a>
+          <a href="https://www.apple.com/" class="header-nav__item">iPhone</a>
+          <a href="https://www.apple.com/" class="header-nav__item">Watch</a>
+          <a href="https://www.apple.com/" class="header-nav__item">Vision</a>
+          <a href="https://www.apple.com/" class="header-nav__item">Airpods</a>
+          <a href="https://www.apple.com/" class="header-nav__item"
+            >TV & Home</a
+          >
+          <a href="https://www.apple.com/" class="header-nav__item"
+            >Entertainment</a
+          >
+          <a href="https://www.apple.com/" class="header-nav__item"
+            >Accessories</a
+          ><a href="https://www.apple.com/" class="header-nav__item">Support</a>
+        </nav>
+        <button class="header-button header-button--search"></button>
+        <button class="header-button header-button--bag"></button>
+      </header>
 
+      <!-- banner -->
+      <section class="banner">
+        <div class="banner__text">
+          Pay monthly at 0% APR when you choose to check out with Apple Card
+          Monthly Installments.
+        </div>
+      </section>
+
+      <!-- blurred background -->
+      <section class="blurred-background"></section>
+
+      <!-- store head -->
+      <section class="store-heads-container">
+        <div class="store-heads">
+          <div class="store-head store-head--heading">Store.</div>
+          <div class="store-head store-head--subheading">
+            Gift magic this holiday.
+          </div>
+        </div>
+        <div class="head-questions">
+          <div class="question question--shop-help">
+            <img class="question__icon" />
+            <div class="question__text">
+              <div class="title">Need shopping help?</div>
+              <a href="https://www.apple.com/" class="content"
+                >Ask a Specialist</a
+              >
+            </div>
+          </div>
+          <div class="question">
+            <img class="question__icon" />
+            <div class="question__text">
+              <div class="title">Visit an Apple Store</div>
+              <a href="https://www.apple.com/" class="content"
+                >Find one near you</a
+              >
+            </div>
+          </div>
+        </div>
+
+        <!-- product list -->
+      </section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+    </main>
+  </body>
+</html>
