til-latest-section

--- a/apple-store.html
+++ b/apple-store.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Hanuman:wght@100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <title></title>
   </head>
   <body>
     <main>
@@ -78,11 +79,190 @@
             </div>
           </div>
         </div>
-
-        <!-- product list -->
       </section>
-      <section></section>
-      <section></section>
+
+      <!-- product categories new-->
+      <section class="product-categories-container">
+        <div class="product-categories">
+          <div class="category">
+            <div class="category__imgbox">
+              <img src="image-store/store-card-mac.png" class="category-img" />
+            </div>
+            <div class="categoty__title">Mac</div>
+          </div>
+
+          <div class="category">
+            <div class="category__imgbox">
+              <img
+                src="image-store/store-card-iphone.png"
+                class="category-img"
+              />
+            </div>
+            <div class="categoty__title">iPhone</div>
+          </div>
+
+          <div class="category">
+            <div class="category__imgbox">
+              <img src="image-store/store-card-ipad.png" class="category-img" />
+            </div>
+            <div class="categoty__title">iPad</div>
+          </div>
+
+          <div class="category">
+            <div class="category__imgbox">
+              <img
+                src="image-store/store-card-watch.png"
+                class="category-img"
+              />
+            </div>
+            <div class="categoty__title">Apple Watch</div>
+          </div>
+
+          <div class="category">
+            <div class="category__imgbox">
+              <img
+                src="image-store/store-card-vision-pro.png"
+                class="category-img"
+              />
+            </div>
+            <div class="categoty__title">Apple Vision Pro</div>
+          </div>
+
+          <div class="category">
+            <div class="category__imgbox">
+              <img
+                src="image-store/store-card-airpods.png"
+                class="category-img"
+              />
+            </div>
+            <div class="categoty__title">Airpods</div>
+          </div>
+
+          <div class="category">
+            <div class="category__imgbox">
+              <img
+                src="image-store/store-card-airtags.png"
+                class="category-img"
+              />
+            </div>
+            <div class="categoty__title">AirTag</div>
+          </div>
+
+          <div class="category">
+            <div class="category__imgbox">
+              <img
+                src="image-store/store-card-appletv.png"
+                class="category-img"
+              />
+            </div>
+            <div class="categoty__title">Apple TV 4K</div>
+          </div>
+
+          <div class="category">
+            <div class="category__imgbox">
+              <img
+                src="image-store/store-card-homepod.png"
+                class="category-img"
+              />
+            </div>
+            <div class="categoty__title">Homepod</div>
+          </div>
+
+          <div class="category">
+            <div class="category__imgbox">
+              <img
+                src="image-store/store-card-accessories.png"
+                class="category-img"
+              />
+            </div>
+            <div class="categoty__title">Accessories</div>
+          </div>
+
+          <div class="category">
+            <div class="category__imgbox">
+              <img
+                src="image-store/store-card-holiday-giftcards.png"
+                class="category-img"
+              />
+            </div>
+            <div class="categoty__title">Apple Gift Card</div>
+          </div>
+        </div>
+      </section>
+
+      <!-- latest products -->
+      <section class="latest-container">
+        <div class="latest-content">
+          <div class="latest__head">
+            <div class="latest-heading">The latest.</div>
+            <div class="latest-subheading">Let them unwrap wonders.</div>
+          </div>
+          <div class="latest-cards">
+            <div class="latest-card">
+              <img class="latest-card__img" />
+              <div class="latest-card-text">
+                <div class="latest-card__addinfo">APPLE INTELLIGENCE</div>
+                <div class="latest-card__name">iPhone 16 Pro</div>
+                <div class="latest-card__price">
+                  From $999 or $41.62/mo. for 24 mo.*
+                </div>
+              </div>
+            </div>
+            <div class="latest-card">
+              <img class="latest-card__img" />
+              <div class="latest-card-text">
+                <div class="latest-card__addinfo"></div>
+                <div class="latest-card__name">Apple Watch Series 10</div>
+                <div class="latest-card__price">
+                  From $399 or $33.25/mo. for 12 mo.
+                </div>
+              </div>
+            </div>
+            <div class="latest-card">
+              <img class="latest-card__img" />
+              <div class="latest-card-text">
+                <div class="latest-card__addinfo">APPLE INTELLIGENCE</div>
+                <div class="latest-card__name">iPad mini</div>
+                <div class="latest-card__price">
+                  From $499 or $41.58/mo. for 12 mo.
+                </div>
+              </div>
+            </div>
+            <div class="latest-card">
+              <img class="latest-card__img" />
+              <div class="latest-card-text">
+                <div class="latest-card__addinfo">APPLE INTELLIGENCE</div>
+                <div class="latest-card__name">MacBook Pro</div>
+                <div class="latest-card__price">
+                  From $1599 or $133.25/mo. for 12 mo.
+                </div>
+              </div>
+            </div>
+            <div class="latest-card">
+              <img class="latest-card__img" />
+              <div class="latest-card-text">
+                <div class="latest-card__addinfo">LIMITED-TIME OFFER</div>
+                <div class="latest-card__name">
+                  Save on Mac and iPad for college, choose AirPods or an
+                  eligible accessory.
+                </div>
+                <div class="latest-card__price"></div>
+              </div>
+            </div>
+            <div class="latest-card">
+              <img class="latest-card__img" />
+              <div class="latest-card-text">
+                <div class="latest-card__addinfo"></div>
+                <div class="latest-card__name">Apple Watch Ultra 2</div>
+                <div>New finish. Never quit.</div>
+                <div class="latest-card__price">
+                  From $799 or $66.55/mo. for 12 mo.†
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <section></section>
       <section></section>
     </main>
